--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
 						  <div class="carousel-item">
 							<div class="card text-center">
 			  <div class="text-center">
-				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
+				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
 			  </div>
 			  <div class="card-body " style="height: 250px;">
 				<h4 class="mb-0">Hemanth Kotra</h4>
