--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						<h2 class="display-3 fw-bold color all-ts mt-lg-0 mt-5 pt-lg-0 pt-5">A Truly amazing <span class="underliner nocolor viewport-detect" data-delay="1000">Doctor</u></span> is hard to find. <img class="position-relative" style="top: -5px;" src="demos/doctors/images/icons/smile.svg" alt="..." width="50"></h2>
 						<p>Nadi Pariksha is the ancient art and science of detecting the existing status of a person's body, mind, soul and spirit.</p>
 						<p>Panchakarma treatment is an Ayurvedic therapy that helps to remove toxins and impurities from the body and mind.</p>
-						<a href="#" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appoinment<i class="bi-arrow-right ms-2 me-0"></i></a>
+						<a href="target-id-treatmenets" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appoinment<i class="bi-arrow-right ms-2 me-0"></i></a>
 					</div>
 					<div class="col-lg-6">
 						<!-- Gallery -->
@@ -378,7 +378,7 @@
 						</div> -->
 					</div>
 
-				<div class="section my-0">
+				<div class="section my-0" id="target-id-treatmenets">
 					<div class="container">
 						<h2 class="display-4 mb-3 text-center">Treatments</h2>
 							
