--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
         <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
         <h5 class="display-5">Welcome to the Ayurveda</h5>
         <h1>Dr. Sruthy P.R</h1>
-        <!--<div class="line my-4"></div>
-        <div class="d-inline-flex">-->
+        <div class="line my-4"></div>
+        <div class="d-inline-flex">
             <h5>BAMS , Senior Nadi Vaidya, Ayurveda Physician</h5>
         </div>
     </div>
