--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 						</div> -->
 					</div>
 
-				<div class="section my-0" id="target-id-treatmenets">
+				<div class="section my-0 m-0" id="target-id-treatmenets">
 					<div class="container">
 						<h2 class="display-4 mb-3 text-center">Treatments</h2>
 							
