--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				<div class="row justify-content-between align-items-center py-lg-6 py-5">
 					<div class="col-lg-5 mb-4 mb-lg-0">
 						<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="50">
-						<h2 class="display-3 fw-bold color all-ts mt-lg-0 mt-5 pt-lg-0 pt-5">A Truly amazing <span class="underliner nocolor viewport-detect" data-delay="1000">Doctor</u></span> is hard to find. <img class="position-relative" style="top: -5px;" src="demos/doctors/images/icons/smile.svg" alt="..." width="50"></h2>
+						<h2 class="display-3 fw-bold color all-ts mt-lg-0 mt-5 pt-lg-0 pt-5">Discover the <span class="underliner nocolor viewport-detect" data-delay="1000">Healing</u></span> Power of Ayurveda <img class="position-relative" style="top: -5px;" src="demos/doctors/images/icons/smile.svg" alt="..." width="50"></h2>
 						<p>Welcome to Shankari Ayurveda Chikitsalayam, where ancient wisdom meets modern healing. Our clinic, led by Dr. Sruthy P.R, offers a range of authentic Ayurvedic treatments designed to restore balance and promote holistic wellness. Discover the power of Ayurveda with personalized care and natural therapies.</p>
 						<a href="#target-id-treatmenets" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appoinment<i class="bi-arrow-right ms-2 me-0"></i></a>
 					</div>
