--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 									<div class="col-md-5">
 										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
 										<h3 class="display-5">General Nadi Pariksha</h3>
-										<span><h5>Traditional Pulse Diagnosis:</span></h5><p>Nadi Pariksha utilizes ancient Ayurvedic techniques to read your pulse, providing insights into your overall health and identifying imbalances.</p>
+										<h5>Traditional Pulse Diagnosis:</h5><p>Nadi Pariksha utilizes ancient Ayurvedic techniques to read your pulse, providing insights into your overall health and identifying imbalances.</p>
 										<ul class="list-unstyled text-larger">
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Sensing</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse</li>
