--- a/index.html
+++ b/index.html
@@ -409,11 +409,13 @@
 									<div class="col-md-5">
 										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
 										<h3 class="display-5">General Nadi Pariksha</h3>
-										<h5>Traditional Pulse Diagnosis:</h5><p>Nadi Pariksha utilizes ancient Ayurvedic techniques to read your pulse, providing insights into your overall health and identifying imbalances.</p>
+										<h5>Traditional Pulse Diagnosis: </h5><p>Nadi Pariksha utilizes ancient Ayurvedic techniques to read your pulse, providing insights into your overall health and identifying imbalances.</p>
+										<h5>Personalized Assessment: </h5><p>During the consultation, Dr. Sruthy evaluates your pulse to understand your unique constitution (Prakriti) and current state (Vikriti).</p>
+										<h5>Customized Treatment Plan: </h5><p>Based on the pulse diagnosis, Dr. Sruthy recommends tailored treatments and lifestyle adjustments to restore harmony and vitality.</p>
 										<ul class="list-unstyled text-larger">
-											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Sensing</li>
+											<!--<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Sensing</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse</li>
-											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Radical</li>
+											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Radical</li>-->
 										</ul>
 										<a href="./General nadi-parikshna.html"><button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book a Appoinment</button></a>
 									</div>
@@ -427,7 +429,7 @@
 									<div class="col-md-5">
 										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
 										<h3 class="display-5">Premium Nadi Pariksha</h3>
-										<p>Nadi Pariksha is the ancient ayurvedic technique of diagnosis through the pulse.</p>
+										<h5>Personalized Assessment:</h5><p>Nadi Pariksha is the ancient ayurvedic technique of diagnosis through the pulse.</p>
 										<ul class="list-unstyled text-larger">
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Yoga</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Diet</li>
