--- a/index.html
+++ b/index.html
@@ -429,12 +429,14 @@
 									<div class="col-md-5">
 										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
 										<h3 class="display-5">Premium Nadi Pariksha</h3>
-										<h5>Personalized Assessment:</h5><p>Nadi Pariksha is the ancient ayurvedic technique of diagnosis through the pulse.</p>
-										<ul class="list-unstyled text-larger">
+										<h5>Comprehensive Health Evaluation: </h5><p>The Premium Nadi Pariksha includes a thorough pulse diagnosis along with an assessment of physical and mental health</p>
+										<h5>Integrated Techniques: </h5><p>This service combines advanced Ayurvedic methods such as yoga, dietary advice, and lifestyle counseling to enhance the diagnostic process.</p>
+										<h5>Holistic Wellness Path: </h5><p>Offers deeper insights into your well-being, providing a holistic plan to rejuvenate your health through personalized recommendations and therapies.</p>
+										<!--<ul class="list-unstyled text-larger">
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Yoga</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Diet</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse Diagonsis</li>
-										</ul>
+										</ul>-->
 										<a href="./premium-nadi-pariksha.html"><button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book a Appoinment</button></a>
 									</div>
 									<div class="col-md-6">
@@ -447,12 +449,14 @@
 									<div class="col-md-5">
 										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
 										<h3 class="display-5">Panchakarma Treatments</h3>
-										<p>Panchakarma is a method of cleansing the body of all the unwanted waste after lubricating it.</p>
-										<ul class="list-unstyled text-larger">
+										<h5>Detoxification Therapy: </h5><p>Panchakarma is designed to cleanse the body of toxins, rejuvenate tissues, and restore balance through five main therapeutic procedures.</p>
+										<h5>Customized Treatments: </h5><p>Treatments such as Nasya (nasal therapy) and Vamana (therapeutic vomiting) are tailored to individual needs, addressing specific health concerns and imbalances.</p>
+										<h5>Mind-Body Balance: </h5><p>These therapies aim to harmonize the body, mind, and spirit, promoting overall wellness and preventing future health issues.</p>
+										<!--<ul class="list-unstyled text-larger">
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Nasya</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Vamana</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Boost Immunity</li>
-										</ul>
+										</ul>-->
 										<h1>Coming soon...</h1>
 									</div>
 									<div class="col-md-6">
