--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 										<a href="./General nadi-parikshna.html"><button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book a Appoinment</button></a>
 									</div>
 									<div class="col-md-6">
-									<img src="./images/icons/nadi.jpg" alt="">
+									<img src="./nadi.jpg" alt="">
 
 										<!--<img src="https://static.wixstatic.com/media/ba45f1_c2ee10d91f1b4e4a93b4c64c1ef660ca~mv2.png/v1/fill/w_560,h_438,al_c,q_85,usm_0.33_1.00_0.00,enc_auto/Nadi%20Pariksha%20image.png" alt=".." class="rounded-6 h-100 object-cover">-->
 									</div>
