--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 					</div>
 				</div> -->
 
-				<div class="section bg-transparent mt-0 mb-0 pb-0">
+				<div class="section bg-transparent">
 					<div class="container">
 						<div class="col-md-12 align-items-center justify-content-center text-center">
 							<h2 class="display-4 mb-3">Our Specialized Departments</h2>
