--- a/index.html
+++ b/index.html
@@ -310,14 +310,15 @@
 				<div class="section bg-transparent mt-lg-0 mb-lg-0 pb-lg-0">
 					<div class="container">
 						<div class="col-md-12 align-items-center justify-content-center text-center">
-							<h2 class="display-4 mb-3">Our Specialized Departments</h2>
+							<h2 class="display-4 mb-3">Our Specialized Offerings</h2>
 							
 							<div class="line my-4"></div>
 						</div>
 						<div class="row justify-content-center">
 							<div class="col-md-9 text-center">
 								
-								<p>Ayurveda or Ayurvedic medicine is a system of traditional medicine native to India, which uses a range of treatments, including panchakarma ('5 actions'), yoga, massage, acupuncture and herbal medicine, to encourage health and wellbeing.</p>
+								<h4>Nadi Pariksha </h4><p>Nadi Pariksha is a traditional Ayurvedic pulse diagnosis technique used to assess your body’s health and imbalances. During the consultation, Dr. Sruthy will evaluate your pulse to understand your unique constitution and recommend personalized treatments to restore harmony and vitality.</p>
+								<h4>Panchakarma Treatments </h4><p>Panchakarma is a cornerstone of Ayurvedic therapy, designed for detoxification and renewal. Our treatments include Nasya (nasal therapy), Vamana (therapeutic vomiting), and more, each tailored to cleanse and balance your body, mind, and spirit. Experience the transformative effects of Panchakarma at Shankari Ayurveda.</p>
 							</div>
 						</div>
 						<!-- new -->
