--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
 						</div>
 						<div class="row justify-content-center">
 							<div class="col-md-9 text-center">
-								<h4>Nadi Pariksha </h4><p>Nadi Pariksha is a traditional Ayurvedic pulse diagnosis technique used to assess your body’s health and imbalances. During the consultation, Dr. Sruthy will evaluate your pulse to understand your unique constitution and recommend personalized treatments to restore harmony and vitality.</p>
-								<h4>Panchakarma Treatments </h4><p>Panchakarma is a cornerstone of Ayurvedic therapy, designed for detoxification and renewal. Our treatments include Nasya (nasal therapy), Vamana (therapeutic vomiting), and more, each tailored to cleanse and balance your body, mind, and spirit. Experience the transformative effects of Panchakarma at Shankari Ayurveda.</p>
+								<h4 class="m-0">Nadi Pariksha </h4><p>Nadi Pariksha is a traditional Ayurvedic pulse diagnosis technique used to assess your body’s health and imbalances. During the consultation, Dr. Sruthy will evaluate your pulse to understand your unique constitution and recommend personalized treatments to restore harmony and vitality.</p>
+								<h4 class="m-0">Panchakarma Treatments </h4><p>Panchakarma is a cornerstone of Ayurvedic therapy, designed for detoxification and renewal. Our treatments include Nasya (nasal therapy), Vamana (therapeutic vomiting), and more, each tailored to cleanse and balance your body, mind, and spirit. Experience the transformative effects of Panchakarma at Shankari Ayurveda.</p>
 							</div>
 						</div>
 						<!-- new -->
