--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 										<a href="./premium-nadi-pariksha.html"><button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book a Appoinment</button></a>
 									</div>
 									<div class="col-md-6">
-										<img src="./images/icons/Premium nadi.png" alt="">
+										<img src="./images/icons/Premium nadi.jpg" alt="">
 										<!--<img src="https://static.wixstatic.com/media/ba45f1_c2ee10d91f1b4e4a93b4c64c1ef660ca~mv2.png/v1/fill/w_560,h_438,al_c,q_85,usm_0.33_1.00_0.00,enc_auto/Nadi%20Pariksha%20image.png" alt=".." class="rounded-6 h-100 object-cover">-->
 									</div>
 								</div>
@@ -463,7 +463,7 @@
 										<h1>Coming soon...</h1>
 									</div>
 									<div class="col-md-6">
-										<img src="./images/icons/panchakarma.jpg" alt="">
+										<img src="./images/icons/panchakarma.webp" alt="">
 									<!--	<img src="https://t4.ftcdn.net/jpg/05/90/17/23/360_F_590172388_eEZ8vGqNqAtYSNP7LcRTMyl0db5kemNX.jpg" alt=".." class="rounded-6 h-100 object-cover">-->
 									</div>
 								</div>
