--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 										<h1>Coming soon...</h1>
 									</div>
 									<div class="col-md-6">
-										<img src="./images/icons/panchakarma.webp" alt="">
+										<img src="./images/icons/panchakarma-latest.jpg" alt="">
 									<!--	<img src="https://t4.ftcdn.net/jpg/05/90/17/23/360_F_590172388_eEZ8vGqNqAtYSNP7LcRTMyl0db5kemNX.jpg" alt=".." class="rounded-6 h-100 object-cover">-->
 									</div>
 								</div>
