--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <h2 class="m-0 pb-lg-2">Dr. Sruthy P.R</h2>
         <!--<div class="line my-4"></div>-->
         <div class="d-inline-flex">
-            <p class="m-0 pb-lg-2"><strog>BAMS , Senior Nadi Vaidya, Ayurveda Physician</strog></p>
+            <p class="m-0 pb-lg-2"><strong>BAMS, Senior Nadi Vaidya, Ayurveda Physician</strong></p>
 	</div>
 	    <p>Dr.Sruthy is a dedicated Ayurvedic practitioner with extensive training and experience. Her approach integrates traditional Ayurvedic principles with contemporary practices to provide comprehensive health solutions. Dr. Sruthy’s commitment to patient care and her deep understanding of Ayurveda ensures a healing journey tailored to each individual's needs.</p>
        
