--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 
-		<nav class="navbar navbar-expand-lg fixed-top ps-lg-5 pe-lg-5" style="background-color: #f5f7f9; color: black; ">
+		<nav class="navbar navbar-expand-lg fixed-top ps-lg-5 pe-lg-5" style="background-color: #f5f7f9; box-shadow: 0px 2px 2px lightgray; color: black; ">
 			<div class="container-fluid">
 				<img src="./images/Shankari_Logo.png" alt="Shankari_Logo.png" style="width: 200px; height: auto;">			
 				
