--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 		<nav class="navbar navbar-expand-lg fixed-top ps-lg-5 pe-lg-5" style="background-color: #f5f7f9; box-shadow: 0px 2px 2px lightgray; color: black; ">
 			<div class="container-fluid">
-				<img src="./images/Shankari_Logo.png" alt="Shankari_Logo.png" style="width: 200px; height: auto;">			
+				<img src="./images/Shankari_Logo.png" alt="Shankari Logo" style="width: 200px !important; height: auto !important;">
 				
 							  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: white; background-color: #fff;">
 				<span class="navbar-toggler-icon"></span>
@@ -100,9 +100,6 @@
 				  <li class="nav-item">
 					<a class="nav-link active text-white pe-lg-3" aria-current="page" href="./index.html">Home</a>
 				  </li>
-				  <!-- <li class="nav-item">
-					<a class="nav-link text-white" href="./doctor.html">Doctor</a>
-				  </li> -->
 				  <li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle text-white pe-lg-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 					  Treatments
