--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
 
 
-		<nav class="navbar navbar-expand-lg fixed-top ps-lg-5 pe-lg-5" style="background-color: #f5f7f9; box-shadow: 0px 2px 2px lightgray; color: black; ">
+		<nav class="navbar navbar-expand-lg fixed-top ps-lg-5 pe-lg-5" style="background-color: #f5f7f9; box-shadow: 0px 2px 2px lightgray; color: black !important; ">
 			<div class="container-fluid">
-				<img src="./images/icons/Shankari_Logo_Latest.png" alt="Shankari Logo" style="width: 200px; height: auto;">
+				<img src="./images/icons/Shankari_Logo_Latest.png" alt="Shankari Logo" style="width: 200px; height: auto; margin: 10px">
 				
 							  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: white; background-color: #fff;">
 				<span class="navbar-toggler-icon"></span>
