--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 				<span class="navbar-toggler-icon"></span>
 			  </button>
 			  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-				<ul class="navbar-nav text-white">
-				  <li class="nav-item">
+				<ul class="navbar-nav text-black">
+				  <li class="nav-item" style>
 					<a class="nav-link active text-white pe-lg-3" aria-current="page" href="./index.html">Home</a>
 				  </li>
 				  <li class="nav-item dropdown">
