--- a/index.html
+++ b/index.html
@@ -98,20 +98,20 @@
 			  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 				<ul class="navbar-nav text-black">
 				  <li class="nav-item" style>
-					<a class="nav-link active text-white pe-lg-3" aria-current="page" href="./index.html">Home</a>
+					<a class="nav-link active text-black pe-lg-3 " aria-current="page" href="./index.html">Home</a>
 				  </li>
 				  <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle text-white pe-lg-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+					<a class="nav-link dropdown-toggle text-black pe-lg-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 					  Treatments
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-					  <li><a class="dropdown-item" href="./General nadi-parikshna.html">Nadi Pariksha</a></li>
-					  <li><a class="dropdown-item" href="./premium-nadi-pariksha.html">Premium Nadi Pariksha</a></li>
-					  <!-- <li><a class="dropdown-item" href="./panchakarma.html">Panchakarma</a></li> -->
+					  <li><a class="dropdown-item text-black" href="./General nadi-parikshna.html">Nadi Pariksha</a></li>
+					  <li><a class="dropdown-item text-black" href="./premium-nadi-pariksha.html">Premium Nadi Pariksha</a></li>
+					  <!-- <li><a class="dropdown-item text-black" href="./panchakarma.html">Panchakarma</a></li> -->
 					</ul>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link text-white" href="./contactUs.html">Contact</a>
+					<a class="nav-link text-black" href="./contactUs.html">Contact</a>
 				  </li>
 				</ul>
 			  </div>
