--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 		<nav class="navbar navbar-expand-lg fixed-top ps-lg-5 pe-lg-5" style="background-color: #f5f7f9; box-shadow: 0px 2px 2px lightgray; color: black !important; ">
 			<div class="container-fluid">
-				<img src="./images/icons/Shankari_Logo_Latest.png" alt="Shankari Logo" style="width: 200px; height: auto; margin: 10px">
+				<img src="./images/icons/Shankari_Logo_Latest.png" alt="Shankari Logo" style="width: 200px; height: auto;" class="m-lg-3 m-1">
 				
 							  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: white; background-color: #fff;">
 				<span class="navbar-toggler-icon"></span>
@@ -98,10 +98,10 @@
 			  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 				<ul class="navbar-nav text-black">
 				  <li class="nav-item" style>
-					<a class="nav-link active text-black pe-lg-3 " aria-current="page" href="./index.html">Home</a>
+					<a class="nav-link active text-black pe-lg-3 ms-lg-0 ms-1" aria-current="page" href="./index.html">Home</a>
 				  </li>
 				  <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle text-black pe-lg-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+					<a class="nav-link dropdown-toggle text-black pe-lg-3 ms-lg-0 ms-1" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 					  Treatments
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -111,7 +111,7 @@
 					</ul>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link text-black" href="./contactUs.html">Contact</a>
+					<a class="nav-link text-black ms-lg-0 ms-1" href="./contactUs.html">Contact</a>
 				  </li>
 				</ul>
 			  </div>
