--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Shankari Ayurveda</title>
+	<title>Shankari Ayurveda - Nadi Pariksha, Panchakarma</title>
 	<link rel="icon" type="image/x-icon" href="./images/fav-icon-shankari-ayurveda.png">
 	 <style>
 		 @media screen and(min-width: 360px) {
