--- a/General nadi-parikshna.html
+++ b/General nadi-parikshna.html
@@ -33,7 +33,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Shankari Ayurveda</title>
+	<title>Shankari Ayurveda - General Nadi Pariksha</title>
 
 </head>
 
