--- a/contactUs.html
+++ b/contactUs.html
@@ -33,7 +33,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Shankari Ayurveda</title>
+	<title>Shankari Ayurveda - Contact Us</title>
 
 
 </head>
