--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
 
 		<!-- Footer
 		============================================= -->
-		<footer id="footer" class="border-width-1" style="background-color: #f5f7f9;">
+		<footer id="footer" class="bg-color dark border-width-1">
 			<div class="container">
 
 				<!-- Footer Widgets
