premium-nadi-pariksha.html

--- a/premium-nadi-pariksha.html
+++ b/premium-nadi-pariksha.html
@@ -57,7 +57,7 @@
 			  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 				<ul class="navbar-nav text-white">
 				  <li class="nav-item">
-					<a class="nav-link active text-white pe-lg-3" aria-current="page" href="./index.html">Home</a>
+					<a class="nav-link text-white pe-lg-3" aria-current="page" href="./index.html">Home</a>
 				  </li>
 				  <!-- <li class="nav-item">
 					<a class="nav-link text-white" href="./doctor.html">Doctor</a>
@@ -68,7 +68,7 @@
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 					  <li><a class="dropdown-item" href="./General nadi-parikshna.html">Nadi Pariksha</a></li>
-					  <li><a class="dropdown-item" href="./premium-nadi-pariksha.html">Premium Nadi Pariksha</a></li>
+					  <li><a class="dropdown-item  active" href="./premium-nadi-pariksha.html">Premium Nadi Pariksha</a></li>
 <!-- 					  <li><a class="dropdown-item" href="./panchakarma.html">Panchakarma</a></li> -->
 					</ul>
 				  </li>
@@ -139,7 +139,6 @@
 				</div>
 			</div>
 		</footer><!-- #footer end -->
-
 	</div><!-- #wrapper end -->
 
 	<!-- JavaScripts
