--- a/contactUs.html
+++ b/contactUs.html
@@ -50,29 +50,33 @@
 		============================================= -->
 		
 
-		<nav class="navbar navbar-expand-lg fixed-top ps-lg-5 pe-lg-5" style="background-color: #f5f7f9; box-shadow: 0px 2px 2px lightgray; color: black !important; ">
+		<nav class="navbar navbar-expand-lg fixed-top ps-lg-5 pe-lg-5" style="background-color: #0a3c3f; color: white; ">
 			<div class="container-fluid">
-			<a href="./index.html"><img src="./images/icons/Shankari_Logo_Latest.png" alt="Shankari Logo" style="width: 200px; height: auto;" class="m-lg-3 m-1"></a>				
-							  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: white; background-color: #fff;">
+				<a href="./index.html"><img src="./images/icons/Shankari_Logo_Latest.png" alt="Shankari Logo" style="width: 200px; height: auto;" class="m-lg-3 m-1">
+				</a>
+			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: white; background-color: #fff;">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
 			  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-				<ul class="navbar-nav text-black">
-				  <li class="nav-item" style>
-					<a class="nav-link text-black pe-lg-3 ms-lg-0 ms-3" aria-current="page" href="./index.html">Home</a>
+				<ul class="navbar-nav text-white">
+				  <li class="nav-item">
+					<a class="nav-link text-white pe-lg-3" aria-current="page" href="./index.html">Home</a>
 				  </li>
+				  <!-- <li class="nav-item">
+					<a class="nav-link text-white" href="./doctor.html">Doctor</a>
+				  </li> -->
 				  <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle text-black pe-lg-3 ms-lg-0 ms-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+					<a class="nav-link dropdown-toggle text-white pe-lg-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 					  Treatments
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-					  <li><a class="dropdown-item text-black" href="./General nadi-parikshna.html">Nadi Pariksha</a></li>
-					  <li><a class="dropdown-item text-black" href="./premium-nadi-pariksha.html">Premium Nadi Pariksha</a></li>
-					  <!-- <li><a class="dropdown-item text-black" href="./panchakarma.html">Panchakarma</a></li> -->
+					  <li><a class="dropdown-item" href="./General nadi-parikshna.html">Nadi Pariksha</a></li>
+					  <li><a class="dropdown-item" href="./premium-nadi-pariksha.html">Premium Nadi Pariksha</a></li>
+<!-- 					  <li><a class="dropdown-item" href="./panchakarma.html">Panchakarma</a></li> -->
 					</ul>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link active text-black ms-lg-0 ms-3" href="./contactUs.html">Contact</a>
+					<a class="nav-link active text-white" href="./contactUs.html">Contact</a>
 				  </li>
 				</ul>
 			  </div>
@@ -561,7 +565,7 @@
 		</section>
 		<!-- #content end -->
 
-		<footer id="footer" class="border-width-1" style="background-color: #f5f7f9;">
+		<footer id="footer" class="bg-color dark border-width-1">
 			<div class="container">
 
 				<!-- Footer Widgets
@@ -570,7 +574,7 @@
 					<div class="row gx-4 gy-5">
 						<div class="col-lg-8 col-6 d-flex justify-content-center">
 							<div class="container m-0 p-0 d-flex align-items-center">
-								<img src="./images/icons/Shankari_Logo_Latest.png" alt="Shankari Logo" style="width: 200px; height: auto;">
+								<img src="./images/icons/Shankari_Logo_Latest.png" alt="Shankari Logo" style="width: 250px; height: auto;">
 							</div>
 						</div>
 					
@@ -614,7 +618,6 @@
 				</div>
 			</div>
 		</footer><!-- #footer end -->
-
 
 	</div><!-- #wrapper end -->
 
