--- a/contactUs.html
+++ b/contactUs.html
@@ -57,7 +57,7 @@
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: white; background-color: #fff;">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
-			  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+			  <div class="collapse navbar-collapse justify-content-end ms-lg-0 ms-3" id="navbarNav">
 				<ul class="navbar-nav text-white">
 				  <li class="nav-item">
 					<a class="nav-link text-white pe-lg-3" aria-current="page" href="./index.html">Home</a>
