--- a/contactUs.html
+++ b/contactUs.html
@@ -35,6 +35,25 @@
 	============================================= -->
 	<title>Shankari Ayurveda - Contact Us</title>
 
+	<style>
+    @media (max-width: 768px) {
+        .banner-section {
+            height: 40vh; /* Adjust height for smaller screens */
+        }
+        .banner-heading {
+            font-size: 2rem; /* Adjust font size for smaller screens */
+        }
+    }
+    @media (max-width: 480px) {
+        .banner-section {
+            height: 30vh; /* Further adjust height for very small screens */
+        }
+        .banner-heading {
+            font-size: 1.5rem; /* Further adjust font size for very small screens */
+        }
+    }
+</style>
+
 
 </head>
 
