--- a/contactUs.html
+++ b/contactUs.html
@@ -36,20 +36,20 @@
 	<title>Shankari Ayurveda - Contact Us</title>
 
 	<style>
-    @media (max-width: 768px) {
+    @media screen and (max-width: 768px) {
         .banner-section {
-            height: 40vh; /* Adjust height for smaller screens */
+            height: 40vh;
         }
         .banner-heading {
-            font-size: 2rem; /* Adjust font size for smaller screens */
+            font-size: 2rem;
         }
     }
-    @media (max-width: 480px) {
+    @media screen and (max-width: 480px) {
         .banner-section {
-            height: 30vh; /* Further adjust height for very small screens */
+            height: 30vh;
         }
         .banner-heading {
-            font-size: 1.5rem; /* Further adjust font size for very small screens */
+            font-size: 1.5rem;
         }
     }
 </style>
