--- a/index.html
+++ b/index.html
@@ -405,9 +405,9 @@
 									<div class="col-md-5">
 										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
 										<h2 class="display-5">General Nadi Pariksha</h2>
-										<h4 class="mb-lg-3">Traditional Pulse Diagnosis: </h4><p>Nadi Pariksha utilizes ancient Ayurvedic techniques to read your pulse, providing insights into your overall health and identifying imbalances.</p>
-										<h4 class="mb-lg-3">Personalized Assessment: </h4><p>During the consultation, Dr. Sruthy evaluates your pulse to understand your unique constitution (Prakriti) and current state (Vikriti).</p>
-										<h4 class="mb-lg-3">Customized Treatment Plan: </h4><p>Based on the pulse diagnosis, Dr. Sruthy recommends tailored treatments and lifestyle adjustments to restore harmony and vitality.</p>
+										<h4 class="mb-lg-3 mb-2">Traditional Pulse Diagnosis: </h4><p>Nadi Pariksha utilizes ancient Ayurvedic techniques to read your pulse, providing insights into your overall health and identifying imbalances.</p>
+										<h4 class="mb-lg-3 mb-2">Personalized Assessment: </h4><p>During the consultation, Dr. Sruthy evaluates your pulse to understand your unique constitution (Prakriti) and current state (Vikriti).</p>
+										<h4 class="mb-lg-3 mb-2">Customized Treatment Plan: </h4><p>Based on the pulse diagnosis, Dr. Sruthy recommends tailored treatments and lifestyle adjustments to restore harmony and vitality.</p>
 										<ul class="list-unstyled text-larger">
 											<!--<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Sensing</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse</li>
@@ -427,9 +427,9 @@
 									<div class="col-md-5">
 										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
 										<h2 class="display-5">Premium Nadi Pariksha</h2>
-										<h4 class="mb-lg-3">Comprehensive Health Evaluation: </h4><p>The Premium Nadi Pariksha includes a thorough pulse diagnosis along with an assessment of physical and mental health</p>
-										<h4 class="mb-lg-3">Integrated Techniques: </h4><p>This service combines advanced Ayurvedic methods such as yoga, dietary advice, and lifestyle counseling to enhance the diagnostic process.</p>
-										<h4 class="mb-lg-3">Holistic Wellness Path: </h4><p>Offers deeper insights into your well-being, providing a holistic plan to rejuvenate your health through personalized recommendations and therapies.</p>
+										<h4 class="mb-lg-3 mb-2">Comprehensive Health Evaluation: </h4><p>The Premium Nadi Pariksha includes a thorough pulse diagnosis along with an assessment of physical and mental health</p>
+										<h4 class="mb-lg-3 mb-2">Integrated Techniques: </h4><p>This service combines advanced Ayurvedic methods such as yoga, dietary advice, and lifestyle counseling to enhance the diagnostic process.</p>
+										<h4 class="mb-lg-3 mb-2">Holistic Wellness Path: </h4><p>Offers deeper insights into your well-being, providing a holistic plan to rejuvenate your health through personalized recommendations and therapies.</p>
 										<!--<ul class="list-unstyled text-larger">
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Yoga</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Diet</li>
@@ -448,9 +448,9 @@
 									<div class="col-md-5">
 										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
 										<h2 class="display-5">Panchakarma Treatments</h2>
-										<h4 class="mb-lg-3">Detoxification Therapy: </h4><p>Panchakarma is designed to cleanse the body of toxins, rejuvenate tissues, and restore balance through five main therapeutic procedures.</p>
-										<h4 class="mb-lg-3">Customized Treatments: </h4><p>Treatments such as Nasya (nasal therapy) and Vamana (therapeutic vomiting) are tailored to individual needs, addressing specific health concerns and imbalances.</p>
-										<h4 class="mb-lg-3">Mind-Body Balance: </h4><p>These therapies aim to harmonize the body, mind, and spirit, promoting overall wellness and preventing future health issues.</p>
+										<h4 class="mb-lg-3 mb-2">Detoxification Therapy: </h4><p>Panchakarma is designed to cleanse the body of toxins, rejuvenate tissues, and restore balance through five main therapeutic procedures.</p>
+										<h4 class="mb-lg-3 mb-2">Customized Treatments: </h4><p>Treatments such as Nasya (nasal therapy) and Vamana (therapeutic vomiting) are tailored to individual needs, addressing specific health concerns and imbalances.</p>
+										<h4 class="mb-lg-3 mb-2">Mind-Body Balance: </h4><p>These therapies aim to harmonize the body, mind, and spirit, promoting overall wellness and preventing future health issues.</p>
 										<!--<ul class="list-unstyled text-larger">
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Nasya</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Vamana</li>
@@ -857,7 +857,7 @@
 								<ul class="list-unstyled">
 									<li class="mb-3">
 										<a href="tel:+91 9959211800" class="d-flex">
-											<i class="me-3 bi-telephone-fill"></i>+9908157287
+											<i class="me-3 bi-telephone-fill"></i>+91 9908157287
 										</a>
 									</li>
 									<li class="mb-3">
