premium-nadi-pariksha.html

--- a/premium-nadi-pariksha.html
+++ b/premium-nadi-pariksha.html
@@ -105,7 +105,7 @@
 								<ul class="list-unstyled">
 									<li class="mb-3">
 										<a href="tel:+91 9959211800" class="d-flex">
-											<i class="me-3 bi-telephone-fill"></i>+9908157287
+											<i class="me-3 bi-telephone-fill"></i>+91 9908157287
 										</a>
 									</li>
 									<li class="mb-3">
